Fix color of active buttons in dark mode

--- a/frontend/less/colors.less
+++ b/frontend/less/colors.less
@@ -40,7 +40,7 @@
 		--success-background-color: #060a08;
 		--shaded-background-color: #222;
 		--lightly-shaded-background-color: #222;
-		--hovered-background-color: #111;
+		--hovered-background-color: #181818;
 		--prefix-color: #ef6e91;
 		--lenition-color: #76dfa3;
 		--infix-color: #be7cf8;
