--- a/frontend/less/semantic-overrides.less
+++ b/frontend/less/semantic-overrides.less
@@ -49,7 +49,7 @@ body,
 .ui.basic.buttons .button:hover,
 .ui.basic.buttons .button.active {
 	color: var(--muted-color) !important;
-	background-color: var(--hovered-background-color) !important;
+	background-color: var(--lightly-shaded-background-color) !important;
 }
 
 .ui.modal,
